--- a/descriptors/spell_misspell/index.html
+++ b/descriptors/spell_misspell/index.html
@@ -4680,7 +4680,7 @@ See documentation on https://nvuillam.github.io/mega-linter/descriptors/spell_mi
 -----------------------------------------------
 
 ❌ [ERROR] .automation/test/spell
-    .automation/test/spell/spell_bad_1.js:1:6: &quot;langauge&quot; is a misspelling of &quot;language&quot;
+    .automation/test/spell/spell_bad_1.js:1:6: &quot;language&quot; is a misspelling of &quot;language&quot;
 
 </code></pre>
                 
