--- a/descriptors/powershell_powershell/index.html
+++ b/descriptors/powershell_powershell/index.html
@@ -4844,7 +4844,7 @@ All parameters are case-insensitive.
 
     Example: &quot;pwsh -o XML -c Get-Date&quot;
 
-    When called withing a PowerShell session, you get deserialized objects as
+    When called within a PowerShell session, you get deserialized objects as
     output rather plain strings. When called from other shells, the output is
     string data formatted as CLIXML text.
 
