--- a/descriptors/snakemake_snakemake/index.html
+++ b/descriptors/snakemake_snakemake/index.html
@@ -5024,7 +5024,7 @@ UTILITIES:
                         input files will be skipped (a warning will be
                         issued). For each rule, one test case will be created
                         in the specified test folder (.tests/unit by default).
-                        After successfull execution, tests can be run with
+                        After successful execution, tests can be run with
                         'pytest TESTPATH'. (default: None)
   --containerize        Print a Dockerfile that provides an execution
                         environment for the workflow, including all conda
@@ -5365,7 +5365,7 @@ CLUSTER:
                         command provided to --cluster returns the cluster job
                         id. Then, the status command will be invoked with the
                         job id. Snakemake expects it to return 'success' if
-                        the job was successfull, 'failed' if the job failed
+                        the job was successful, 'failed' if the job failed
                         and 'running' if the job still runs. (default: None)
   --drmaa-log-dir DIR   Specify a directory in which stdout and stderr files
                         of DRMAA jobs will be written. The value may be given
