tidy up descriptor pages

--- a/descriptors/bash_bash_exec/index.html
+++ b/descriptors/bash_bash_exec/index.html
@@ -4516,105 +4516,105 @@
 </thead>
 <tbody>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/images/mega-linter-square.png" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/images/mega-linter-square.png" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://nvuillam.github.io/mega-linter/supported-linters/">all</a></td>
 <td>Default Mega-Linter Flavor</td>
 <td>88</td>
 <td><img alt="Docker Image Size (tag)" src="https://img.shields.io/docker/image-size/nvuillam/mega-linter/v4" /> <img alt="Docker Pulls" src="https://img.shields.io/docker/pulls/nvuillam/mega-linter" /></td>
 </tr>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/dart.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/dart.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://nvuillam.github.io/mega-linter/flavors/dart/">dart</a></td>
 <td>Optimized for DART based projects</td>
 <td>39</td>
 <td><img alt="Docker Image Size (tag)" src="https://img.shields.io/docker/image-size/nvuillam/mega-linter-dart/v4" /> <img alt="Docker Pulls" src="https://img.shields.io/docker/pulls/nvuillam/mega-linter-dart" /></td>
 </tr>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/documentation.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/documentation.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://nvuillam.github.io/mega-linter/flavors/documentation/">documentation</a></td>
 <td>Mega-Linter for documentation projects</td>
 <td>38</td>
 <td><img alt="Docker Image Size (tag)" src="https://img.shields.io/docker/image-size/nvuillam/mega-linter-documentation/v4" /> <img alt="Docker Pulls" src="https://img.shields.io/docker/pulls/nvuillam/mega-linter-documentation" /></td>
 </tr>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/dotnet.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/dotnet.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://nvuillam.github.io/mega-linter/flavors/dotnet/">dotnet</a></td>
 <td>Optimized for C, C++, C# or VB based projects</td>
 <td>44</td>
 <td><img alt="Docker Image Size (tag)" src="https://img.shields.io/docker/image-size/nvuillam/mega-linter-dotnet/v4" /> <img alt="Docker Pulls" src="https://img.shields.io/docker/pulls/nvuillam/mega-linter-dotnet" /></td>
 </tr>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/go.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/go.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://nvuillam.github.io/mega-linter/flavors/go/">go</a></td>
 <td>Optimized for GO based projects</td>
 <td>40</td>
 <td><img alt="Docker Image Size (tag)" src="https://img.shields.io/docker/image-size/nvuillam/mega-linter-go/v4" /> <img alt="Docker Pulls" src="https://img.shields.io/docker/pulls/nvuillam/mega-linter-go" /></td>
 </tr>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/java.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/java.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://nvuillam.github.io/mega-linter/flavors/java/">java</a></td>
 <td>Optimized for JAVA based projects</td>
 <td>39</td>
 <td><img alt="Docker Image Size (tag)" src="https://img.shields.io/docker/image-size/nvuillam/mega-linter-java/v4" /> <img alt="Docker Pulls" src="https://img.shields.io/docker/pulls/nvuillam/mega-linter-java" /></td>
 </tr>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/javascript.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/javascript.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://nvuillam.github.io/mega-linter/flavors/javascript/">javascript</a></td>
 <td>Optimized for JAVASCRIPT or TYPESCRIPT based projects</td>
 <td>47</td>
 <td><img alt="Docker Image Size (tag)" src="https://img.shields.io/docker/image-size/nvuillam/mega-linter-javascript/v4" /> <img alt="Docker Pulls" src="https://img.shields.io/docker/pulls/nvuillam/mega-linter-javascript" /></td>
 </tr>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/php.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/php.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://nvuillam.github.io/mega-linter/flavors/php/">php</a></td>
 <td>Optimized for PHP based projects</td>
 <td>42</td>
 <td><img alt="Docker Image Size (tag)" src="https://img.shields.io/docker/image-size/nvuillam/mega-linter-php/v4" /> <img alt="Docker Pulls" src="https://img.shields.io/docker/pulls/nvuillam/mega-linter-php" /></td>
 </tr>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/python.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/python.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://nvuillam.github.io/mega-linter/flavors/python/">python</a></td>
 <td>Optimized for PYTHON based projects</td>
 <td>45</td>
 <td><img alt="Docker Image Size (tag)" src="https://img.shields.io/docker/image-size/nvuillam/mega-linter-python/v4" /> <img alt="Docker Pulls" src="https://img.shields.io/docker/pulls/nvuillam/mega-linter-python" /></td>
 </tr>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/ruby.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/ruby.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://nvuillam.github.io/mega-linter/flavors/ruby/">ruby</a></td>
 <td>Optimized for RUBY based projects</td>
 <td>39</td>
 <td><img alt="Docker Image Size (tag)" src="https://img.shields.io/docker/image-size/nvuillam/mega-linter-ruby/v4" /> <img alt="Docker Pulls" src="https://img.shields.io/docker/pulls/nvuillam/mega-linter-ruby" /></td>
 </tr>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/rust.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/rust.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://nvuillam.github.io/mega-linter/flavors/rust/">rust</a></td>
 <td>Optimized for RUST based projects</td>
 <td>39</td>
 <td><img alt="Docker Image Size (tag)" src="https://img.shields.io/docker/image-size/nvuillam/mega-linter-rust/v4" /> <img alt="Docker Pulls" src="https://img.shields.io/docker/pulls/nvuillam/mega-linter-rust" /></td>
 </tr>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/salesforce.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/salesforce.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://nvuillam.github.io/mega-linter/flavors/salesforce/">salesforce</a></td>
 <td>Optimized for Salesforce based projects</td>
 <td>41</td>
 <td><img alt="Docker Image Size (tag)" src="https://img.shields.io/docker/image-size/nvuillam/mega-linter-salesforce/v4" /> <img alt="Docker Pulls" src="https://img.shields.io/docker/pulls/nvuillam/mega-linter-salesforce" /></td>
 </tr>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/scala.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/scala.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://nvuillam.github.io/mega-linter/flavors/scala/">scala</a></td>
 <td>Optimized for SCALA based projects</td>
 <td>39</td>
 <td><img alt="Docker Image Size (tag)" src="https://img.shields.io/docker/image-size/nvuillam/mega-linter-scala/v4" /> <img alt="Docker Pulls" src="https://img.shields.io/docker/pulls/nvuillam/mega-linter-scala" /></td>
 </tr>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/swift.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/swift.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://nvuillam.github.io/mega-linter/flavors/swift/">swift</a></td>
 <td>Optimized for SWIFT based projects</td>
 <td>39</td>
 <td><img alt="Docker Image Size (tag)" src="https://img.shields.io/docker/image-size/nvuillam/mega-linter-swift/v4" /> <img alt="Docker Pulls" src="https://img.shields.io/docker/pulls/nvuillam/mega-linter-swift" /></td>
 </tr>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/terraform.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/terraform.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://nvuillam.github.io/mega-linter/flavors/terraform/">terraform</a></td>
 <td>Optimized for TERRAFORM based projects</td>
 <td>42</td>
