--- a/descriptors/csharp_dotnet_format/index.html
+++ b/descriptors/csharp_dotnet_format/index.html
@@ -4515,14 +4515,14 @@
 </thead>
 <tbody>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/images/mega-linter-square.png" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/images/mega-linter-square.png" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://nvuillam.github.io/mega-linter/supported-linters/">all</a></td>
 <td>Default Mega-Linter Flavor</td>
 <td>88</td>
 <td><img alt="Docker Image Size (tag)" src="https://img.shields.io/docker/image-size/nvuillam/mega-linter/v4" /> <img alt="Docker Pulls" src="https://img.shields.io/docker/pulls/nvuillam/mega-linter" /></td>
 </tr>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/dotnet.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/dotnet.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://nvuillam.github.io/mega-linter/flavors/dotnet/">dotnet</a></td>
 <td>Optimized for C, C++, C# or VB based projects</td>
 <td>44</td>
