--- a/descriptors/arm_arm_ttk/index.html
+++ b/descriptors/arm_arm_ttk/index.html
@@ -4505,7 +4505,7 @@
 </tr>
 <tr>
 <td>ARM_ARM_TTK_CONFIG_FILE</td>
-<td>arm-ttk configuration file name</br>Use <code>LINTER_DEFAULT</code> to let the linter find it</td>
+<td>arm-ttk configuration file name<br/>Use <code>LINTER_DEFAULT</code> to let the linter find it</td>
 <td><code>.arm-ttk.psd1</code></td>
 </tr>
 <tr>
@@ -4538,7 +4538,7 @@
 </thead>
 <tbody>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/vscode.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/vscode.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://code.visualstudio.com/">Visual Studio Code</a></td>
 <td><a href="https://marketplace.visualstudio.com/items?itemName=Sam-Cogan.ARMTTKExtension">ARMTTKExtension</a></td>
 <td><a href="vscode:extension/Sam-Cogan.ARMTTKExtension" target="_blank"><img alt="Install in VsCode" src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/images/btn_install_vscode.png" /></a></td>
@@ -4559,14 +4559,14 @@
 </thead>
 <tbody>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/images/mega-linter-square.png" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/images/mega-linter-square.png" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://nvuillam.github.io/mega-linter/supported-linters/">all</a></td>
 <td>Default Mega-Linter Flavor</td>
 <td>88</td>
 <td><img alt="Docker Image Size (tag)" src="https://img.shields.io/docker/image-size/nvuillam/mega-linter/v4" /> <img alt="Docker Pulls" src="https://img.shields.io/docker/pulls/nvuillam/mega-linter" /></td>
 </tr>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/dotnet.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/dotnet.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://nvuillam.github.io/mega-linter/flavors/dotnet/">dotnet</a></td>
 <td>Optimized for C, C++, C# or VB based projects</td>
 <td>44</td>
