--- a/descriptors/clojure_clj_kondo/index.html
+++ b/descriptors/clojure_clj_kondo/index.html
@@ -4542,25 +4542,25 @@
 </thead>
 <tbody>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/atom.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/atom.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://atom.io/">Atom</a></td>
 <td><a href="https://atom.io/packages/linter-kondo">linter-kondo</a></td>
 <td><a href="https://atom.io/packages/linter-kondo" target="_blank">Visit Web Site</a></td>
 </tr>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/emacs.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/emacs.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://www.gnu.org/software/emacs/">Emacs</a></td>
 <td><a href="https://github.com/borkdude/flycheck-clj-kondo">flycheck-clj-kondo</a></td>
 <td><a href="https://github.com/borkdude/flycheck-clj-kondo" target="_blank">Visit Web Site</a></td>
 </tr>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/vscode.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/vscode.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://code.visualstudio.com/">Visual Studio Code</a></td>
 <td><a href="https://marketplace.visualstudio.com/items?itemName=borkdude.clj-kondo">clj-kondo</a></td>
 <td><a href="vscode:extension/borkdude.clj-kondo" target="_blank"><img alt="Install in VsCode" src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/images/btn_install_vscode.png" /></a></td>
 </tr>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/vscode.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/vscode.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://code.visualstudio.com/">Visual Studio Code</a></td>
 <td><a href="https://github.com/marcomorain/clojure-lint">Clojure lint</a></td>
 <td><a href="https://github.com/marcomorain/clojure-lint" target="_blank">Visit Web Site</a></td>
@@ -4581,7 +4581,7 @@
 </thead>
 <tbody>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/images/mega-linter-square.png" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/images/mega-linter-square.png" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://nvuillam.github.io/mega-linter/supported-linters/">all</a></td>
 <td>Default Mega-Linter Flavor</td>
 <td>88</td>
