--- a/descriptors/cloudformation_cfn_lint/index.html
+++ b/descriptors/cloudformation_cfn_lint/index.html
@@ -4541,19 +4541,19 @@
 </thead>
 <tbody>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/atom.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/atom.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://atom.io/">Atom</a></td>
 <td><a href="https://atom.io/packages/atom-cfn-lint">atom-cfn-lint</a></td>
 <td><a href="https://atom.io/packages/atom-cfn-lint" target="_blank">Visit Web Site</a></td>
 </tr>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/idea.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/idea.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://www.jetbrains.com/products.html#type=ide">IDEA</a></td>
 <td><a href="https://plugins.jetbrains.com/plugin/10973-cfn-lint">cfn-lint</a></td>
 <td><iframe frameborder="none" width="245px" height="48px" src="https://plugins.jetbrains.com/embeddable/install/10973"></iframe></td>
 </tr>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/vscode.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/vscode.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://code.visualstudio.com/">Visual Studio Code</a></td>
 <td><a href="https://marketplace.visualstudio.com/items?itemName=kddejong.vscode-cfn-lint">vscode-cfn-lint</a></td>
 <td><a href="vscode:extension/kddejong.vscode-cfn-lint" target="_blank"><img alt="Install in VsCode" src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/images/btn_install_vscode.png" /></a></td>
@@ -4574,7 +4574,7 @@
 </thead>
 <tbody>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/images/mega-linter-square.png" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/images/mega-linter-square.png" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://nvuillam.github.io/mega-linter/supported-linters/">all</a></td>
 <td>Default Mega-Linter Flavor</td>
 <td>88</td>
