--- a/descriptors/coffee_coffeelint/index.html
+++ b/descriptors/coffee_coffeelint/index.html
@@ -4541,13 +4541,13 @@
 </thead>
 <tbody>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/atom.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/atom.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://atom.io/">Atom</a></td>
 <td><a href="https://atom.io/packages/linter-coffeelint">linter-coffeelint</a></td>
 <td><a href="https://atom.io/packages/linter-coffeelint" target="_blank">Visit Web Site</a></td>
 </tr>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/idea.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/idea.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://www.jetbrains.com/products.html#type=ide">IDEA</a></td>
 <td><a href="https://plugins.jetbrains.com/plugin/7723-coffeelint">coffeelint</a></td>
 <td><iframe frameborder="none" width="245px" height="48px" src="https://plugins.jetbrains.com/embeddable/install/7723"></iframe></td>
@@ -4568,14 +4568,14 @@
 </thead>
 <tbody>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/images/mega-linter-square.png" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/images/mega-linter-square.png" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://nvuillam.github.io/mega-linter/supported-linters/">all</a></td>
 <td>Default Mega-Linter Flavor</td>
 <td>88</td>
 <td><img alt="Docker Image Size (tag)" src="https://img.shields.io/docker/image-size/nvuillam/mega-linter/v4" /> <img alt="Docker Pulls" src="https://img.shields.io/docker/pulls/nvuillam/mega-linter" /></td>
 </tr>
 <tr>
-<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/javascript.ico" alt="" height="32px" class="megalinter-icon"></a></td>
+<td><img src="https://github.com/nvuillam/mega-linter/raw/master/docs/assets/icons/javascript.ico" alt="" height="32px" class="megalinter-icon"></td>
 <td><a href="https://nvuillam.github.io/mega-linter/flavors/javascript/">javascript</a></td>
 <td>Optimized for JAVASCRIPT or TYPESCRIPT based projects</td>
 <td>47</td>
